# pycocks

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_pycocks.py
.github/workflows/: python-package.yml
cocks/: cocks.py  utils.py
src/pycocks/: cocks.py  utils.py
tests/: test_pycocks.py
